Sprint 5. Preparing before writing all tests.