@@ -9,12 +9,12 @@ import java.util.List;
 public class InMemoryHistoryManager implements HistoryManager {
     public static final int HISTORY_SIZE = 10;
 
-    private List<Task> history = new ArrayList<>(HISTORY_SIZE);
+    private final List<Task> history = new ArrayList<>(HISTORY_SIZE);
 
     @Override
     public void add(Task task) {
         if (history.size() == HISTORY_SIZE) {
-            history.remove(0);
+            history.removeFirst();
         }
 
         history.add(task);
